HW09: delete all unnecessary code